--- a/index.html
+++ b/index.html
@@ -152,9 +152,11 @@
 </Section>
 </main>
 <footer class="footer">
+    <div class="container">
     <a class="footer-logo" href="./index.html">Web<span class="logo-span">Studio</span></a>
    
 <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</div>
 </footer>
 </body>
 </html>
