--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </ul>
 </div>
 </Section>
-<Section class="third-section">
+<Section class="third-section" id="Team">
     <div class="container">
     <h2 class="person-title">Our Team</h2>
     <ul class="person-list">
