--- a/index.html
+++ b/index.html
@@ -80,23 +80,31 @@
     <ul class="person-list">
         <li class="person-item">
             <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264">
+            <div class="list-item_container">
             <h3 class="member-name">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
+        </div>
         </li>
         <li class="person-item">
             <img src="./images/tom_ford.jpg" alt="tom ford" width="264">
+              <div class="list-item_container">      
             <h3 class="member-name">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
+        </div>
         </li>
         <li class="person-item">
             <img src="./images/camila_garcia.jpg" alt="camilagarcia" width="264">
+            <div class="list-item_container">
             <h3 class="member-name">Camila Garcia</h3>
             <p class="text">Marketing</p>
+        </div>
         </li>
         <li class="person-item">
             <img src="./images/daniel_wilson.jpg" alt="danielwilson" width="264">
+            <div class="list-item_container" >
             <h3 class="member-name">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
+        </div>
         </li>
     </ul>
 </div>
